--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,10 @@
                     <span></span>
                 </div>
                 <!-- End Mobile Navbar Icon -->
-
+<nav id="navMenu"></nav>
+<script src= "events_menu_header.js"></script>
                 <!-- Navbar Navigation -->
+                <!--
                 <div class="nav-menu">
                     <ul class="nav-menu-inner">
                         <li>
@@ -93,6 +95,7 @@
                         </li>
                     </ul>
                 </div>
+-->
                 <!-- End Navbar Navigation -->
 
             </div>
@@ -131,12 +134,16 @@
                                         <h5>Jenny Mak</h5>
                                         <p>Dr. Jenny Mak is the Executive Director of Columbia’s Industrial Engineering and Operations Research Department, and Executive Director of Graduate Career Placement for Columbia Engineering.</p>
                                         <ul class="social">
+                                            <li><a href="mailto:jenny@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                        <!--
+                                        <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                             <li><a href="https://www.dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
                                             <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
                                             <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
                                         </ul>
+                                    -->
                                     </div>
                                 </div>
                             </div>
@@ -156,12 +163,16 @@
                                         <h5>Jessica Rosa</h5>
                                         <p>Jessica Rosa is the Career Placement Officer for CS students. She is also the Manager of Academic Administration and Student Services for the Computer Science Department.</p>
                                         <ul class="social">
+                                            <li><a href="mailto:jessica@cs.columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                        <!--
+                                        <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                             <li><a href="https://www.dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
                                             <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
                                             <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
                                         </ul>
+                                    -->
                                     </div>
                                 </div>
                             </div>
@@ -181,12 +192,16 @@
                                         <h5>Rachel Cohen</h5>
                                         <p>Rachel is the Career Development Officer for the Data Science Institute. She partners with students, corporations, and industry affiliates to leverage student talent into career opportunities. </p>
                                         <ul class="social">
+                                            <li><a href="mailto:rfc2117@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                        <!--
+                                        <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                             <li><a href="https://www.dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
                                             <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
                                             <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
                                         </ul>
+                                    -->
                                     </div>
                                 </div>
                             </div>
@@ -207,12 +222,16 @@
                                         <h5>Jonathan Stark</h5>
                                         <p>Jonathan has over ten years of professional experience working in higher education. As the Institute’s Director of Operations, he has oversight of the Institute’s day-to-day operations. </p>
                                         <ul class="social">
+                                            <li><a href="mailto:jrs2139@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                        <!--
+                                        <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                             <li><a href="https://www.dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
                                             <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
                                             <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
                                         </ul>
+                                    -->
                                     </div>
                                 </div>
                             </div>
@@ -234,12 +253,16 @@
                                         <h5>​Raina M. Ranaghan</h5>
                                         <p>​Raina M. Ranaghan is the Career Placement Officer for Electrial and Computer Engineering graduate students.</p>
                                         <ul class="social">
+                                            <li><a href="mailto:rmr2185@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                        <!--
+                                        <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                             <li><a href="https://www.dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
                                             <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
                                             <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
                                         </ul>
+                                    -->
                                     </div>
                                 </div>
                             </div>
@@ -256,8 +279,11 @@
                                 <img src="img/team/tamar.jpg" alt="" />
                                 <div class="team-item-detail">
                                     <div class="team-item-detail-inner light-color">
-                                        <h5>Tamar Senderowicz</h5>
+                                        <h5>Tamar Hofer</h5>
                                         <p>Tamar establishes and maintains relationships with employers in the Financial Engineering industries to encourage the hiring of students. </p>
+                                        <ul class="social">
+                                            <li><a href="mailto:tamar@ieor.columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                        <!--
                                         <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
@@ -265,12 +291,13 @@
                                             <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
                                             <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
                                         </ul>
+                                    -->
                                     </div>
                                 </div>
                             </div>
                             <div class="team-item-info">
                                 <h5>Tamar Hofer</h5>
-                                <p class="">Career Placement Officer, Industrial Engineering & Operational Research</p>
+                                <p class="">Career Placement Director For MSFE, Industrial Engineering & Operational Research</p>
                             </div>
                         </div>
                     </div>
@@ -284,12 +311,16 @@
                                         <h5>​Mindi Levinson</h5>
                                         <p>Mindi has been working as the dedicated Career Placement Officer for students in the M.S. in Management Science and Engineering program since its inception in the fall of 2011. </p>
                                         <ul class="social">
+                                            <li><a href="mailto:mindi@ieor.columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                        <!--
+                                        <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                             <li><a href="https://www.dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
                                             <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
                                             <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
                                         </ul>
+                                    -->
                                     </div>
                                 </div>
                             </div>
@@ -308,12 +339,16 @@
                                         <h5>Gerald Cotiangco</h5>
                                         <p>Before joining the IEOR Career Team at Columbia, Gerald worked for two New York City based nonprofits, where he coordinated volunteers, events, and programs. He received his BA in foreign languages from Eastern Illinois University.</p>
                                         <ul class="social">
+                                            <li><a href="mailto:gerald@ieor.columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                        <!--
+                                        <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                             <li><a href="https://www.dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
                                             <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
                                             <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
                                         </ul>
+                                    -->
                                     </div>
                                 </div>
                             </div>
@@ -333,15 +368,16 @@
                                         <h5>Tiffany Alexander</h5>
                                         <p>Tiffany has a background in graduate career development and a love for helping students obtain jobs that align with their specific career interests. She received her BA in Psychology from Saint John’s University, graduating magna cum laude, and her MS in Industrial/Organizational Psychology from Baruch College’s Weissman School of Arts and Sciences.</p>
                                         <ul class="social">
+                                            <li><a href="mailto:tiffany@ieor.columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
+                                        <!--
+                                        <ul class="social">
                                             <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                             <li><a href="https://www.dribbble.com/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
                                             <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
                                             <li><a href="https://www.behance.net/" target="_blank"><i class="fa fa-behance"></i></a></li>
                                         </ul>
-                                    </div>
-                                </div>
-                            </div>
+                                    -->
                             <div class="team-item-info">
                                 <h5>Tiffany Alexander</h5>
                                 <p class="">MSIE & MSOR, Career Placement Officer</p>
