--- a/events.html
+++ b/events.html
@@ -363,28 +363,14 @@
                         </div>
                     </div>
 
-                    <div class="nf-item innovate tech spacing all">
+                    <div class="nf-item communicate lead spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single6-video.html">
-                                <img alt="1" src="img/portfolio/latex.jpg" class="item-container">
+                            <a href="https://www.eventbrite.com/e/sexual-harassment-when-professional-development-is-compromised-registration-27679836135">
+                                <img alt="1" src="img/portfolio/sexualharrassment.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">LaTEX Workshop</h5>
-                                        <p class="salmon">Innovation, Tech Skills</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="nf-item communicate connect spacing all">
-                        <div class="item-box">
-                            <a href="https://www.eventbrite.com/e/linkedin-and-the-elevator-pitch-tickets-28192988989">
-                                <img alt="1" src="img/portfolio/linkedin.jpg" class="item-container">
-                                <div class="item-mask">
-                                    <div class="item-caption">
-                                        <h5 class="white">Professional Development 101: LinkedIn & the Elevator Pitch</h5>
-                                        <p class="salmon">Communication, Networking</p>
+                                        <h5 class="white">Sexual Harassment: When Professional Development Is Compromised</h5>
+                                        <p class="salmon">Professional Development, Communication, Leadership</p>
                                     </div>
                                 </div>
                             </a>
@@ -393,12 +379,26 @@
 
                     <div class="nf-item innovate tech spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single8-vimeo.html">
-                                <img alt="1" src="img/portfolio/userstories.jpg" class="item-container">
+                            <a href="https://www.eventbrite.com/e/design-thinking-101-tickets-28486417642">
+                                <img alt="1" src="img/portfolio/uxdesign.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Understanding User Stories</h5>
+                                        <h5 class="white">Design Thinking 101: Intro to UX</h5>
                                         <p class="salmon">Innovation, Tech Skills</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item connect spacing all">
+                        <div class="item-box">
+                            <a href="https://www.eventbrite.com/e/graduate-engineers-connect-2016-registration-27726994186">
+                                <img alt="1" src="img/portfolio/gradengconnect.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Graduate Engineers Connect 2016</h5>
+                                        <p class="salmon">Networking, Career</p>
                                     </div>
                                 </div>
                             </a>
@@ -617,10 +617,10 @@
                 </div>
 
             </div>
-            <div id="cal" class="responsiveCal" >
+            <div id="cal" class="container" >
             <h1 align="center"> Calendar </h1>
             <p>
-                <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=seascapengineering%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="font-family: garamond"; "border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>  
+                <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showTabs=0&amp;showCalendars=0&amp;height=1000&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=seascapengineering%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0" width="1300" height="1000" frameborder="0" scrolling="no"></iframe>
             </p>
         </div>
         </section>
