--- a/index.html
+++ b/index.html
@@ -241,12 +241,14 @@
                         </div>
                         <div class="spacer-15 text-center">
                         <p class="lead">The Core are the building blocks to developing the engineering leaders of tomorrow. The PDL program lays a foundational platform that encompasses an array of course offerings (i.e. courses, workshops, labs, competitions, etc.)  available throughout the year to all graduate engineering students.</p>
-                        <p></p>
                         </div>
                     </div>
 
                 </div>
             </div>
+            <br />
+            <br />
+            <br />
             <br />
             <br />
             <br />
@@ -306,12 +308,12 @@
                 <div class="row">
                     <ul class="container-filter categories-filter">
                         <li><a class="categories active" data-filter=".all">All</a></li>
-                        <li><a class="categories" data-filter=".communicate">Communicate</a></li>
-                        <li><a class="categories" data-filter=".lead">Lead</a></li>
-                        <li><a class="categories" data-filter=".collaborate">Collaborate</a></li>
-                        <li><a class="categories" data-filter=".innovate">Innovate</a></li>
-                        <li><a class="categories" data-filter=".connect">Connect</a></li>
-                        <li><a class="categories" data-filter=".tech">Tech</a></li>
+                        <li><a class="categories" data-filter=".communicate"><img alt="1" src="img/portfolio/ios7-compose.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".lead"><img alt="1" src="img/portfolio/ios7-person.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".collaborate"><img alt="1" src="img/portfolio/ios7-people.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".innovate"><img alt="1" src="img/portfolio/ios7-lightbulb.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".connect"><img alt="1" src="img/portfolio/ios-color-filter.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".tech"><img alt="1" src="img/portfolio/ios7-gear.png" class="item-container"></a></li>
                     </ul>
                 </div>
                 <!-- End work Filter -->
@@ -321,14 +323,14 @@
                 <div class="row">
                     <div class="container-grid nf-col-4">
 
-                        <div class="nf-item communicate all">
+                        <div class="nf-item connect all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/resume-reviews-making-the-most-of-graduate-career-fairs-tickets-28194686065" title="Resume Review: Making the Most of Graduate Career Fairs">
-                                    <img class="item-container" src="img/portfolio/writing.jpg" alt="1" />
+                                <a class="" href="https://www.eventbrite.com/e/graduate-engineers-connect-2016-registration-27726994186" title="Graduate Engineers Connect">
+                                    <img class="item-container" src="img/portfolio/gradengconnect.png" alt="1" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Resume Review: Making the Most of Graduate Career Fairs</h5>
-                                            <p class="white">Attending a Career Fair can be rewarding, but overwhelming. However, with guidance from CCE, you can attend with complete confidence! Get tips on preparing for the event, making the most of meeting recruiters on the day of the fair, and following up after the event to maintain the connections.</p>
+                                            <h5 class="lightblue">Graduate Engineers Connect 2016</h5>
+                                            <p class="white">This signature event for graduate students and alumni will feature keynote remarks by alumnus Dr. Jonathan Rosenberg PhD'01, Vice President and Chief Technology Officer of the Collaboration Technology Group at Cisco. GraduateEngineers Connect seeks to strengthen the Columbia Engineering graduate community by bringing over 200 graduate-level degree alumni, students, and post-doctoral fellows together for an evening of networking and information sharing.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
@@ -336,14 +338,14 @@
                             </div>
                         </div>
 
-                        <div class="nf-item tech connect all">
+                        <div class="nf-item tech innovate all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/career-talk-data-science-in-finance-tickets-28262811831" title="Career Talk: Data Science in Finance">
-                                    <img class="item-container" src="img/portfolio/careertalkone.jpg" alt="2" />
+                                <a class="" href="https://www.eventbrite.com/e/design-thinking-101-tickets-28486417642" title="Design Thinking 101">
+                                    <img class="item-container" src="img/portfolio/uxdesign.png" alt="2" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Career Talk: Data Science in Finance</h5>
-                                            <p class="white">This talk will feature Norman Neimer, MSFE graduate, and current team leader in Data Science at UBS O'Connor, the hedge fund of UBS.</p>
+                                            <h5 class="lightblue">Design Thinking 101: Intro to UX</h5>
+                                            <p class="white">What is design thinking? Why is it important? In this workshop, we will learn the role design thinking plays in organizations and in the process of building a product. Students will participate in hands on ideation and problem solving.</p>
                                             <p class="salmon"> Click here to register</p>
                                         </div>
                                     </div>
@@ -398,12 +400,12 @@
 
                         <div class="nf-item tech all">
                             <div class="item-box">
-                                <a class="" href="http://library.columbia.edu/news/events/event.html?guid=CAL-00bbdcc7-57455e21-0157-67eb95b4-0000449eevents%40columbia.edu&returnlinkurl=/content/libraryweb/locations/dssc/workshops&returnlinktext=Workshops%20%26%20Training" title="Python Open Labs">
-                                    <img class="item-container" src="img/portfolio/pythonopenlab.png" alt="6" />
+                                <a class="" href="https://www.eventbrite.com/e/silicon-alley-speed-networking-tickets-28290653105" title="Silicon Alley Speed Networking">
+                                    <img class="item-container" src="img/portfolio/speednetwork.png" alt="6" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Python Open Labs: Programming Made Easy</h5>
-                                            <p class="white">Join us in exploring the basics of programming via Python, one of the most widely used programming languages and indispensable tool in almost every field. A continuation from the the first session covering the Python basics right from the beginning, setting the groundwork for a range of possibilities including text processing, using databases and interacting with web pages and APIs.</p>
+                                            <h5 class="lightblue">Silicon Alley Speed Networking</h5>
+                                            <p class="white">Please join us for SEAS first inaugural Silicon Alley Speed Networking.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
@@ -411,7 +413,7 @@
                             </div>
                         </div>
 
-                        <div class="nf-item connect all">
+                        <div class="nf-item connect communicate all">
                             <div class="item-box">
                                 <a class="" href="http://specialevents.cce.columbia.edu/graduate-student-career-fair-2016" title="Graduate Student Career Fair 2016">
                                     <img class="item-container" src="img/portfolio/gradcareerfair.png" alt="7" />
@@ -426,14 +428,14 @@
                             </div>
                         </div>
 
-                        <div class="nf-item communicate all">
+                        <div class="nf-item communicate lead all">
                             <div class="item-box">
-                                <a class="" href="events.html#events-sync" title="Donec sodales sagittis">
-                                    <img class="item-container" src="img/portfolio/sync.jpg" alt="8" />
+                                <a class="" href="https://www.eventbrite.com/e/sexual-harassment-when-professional-development-is-compromised-registration-27679836135" title="Sexual Harrassment: When Professional Development is Compromised">
+                                    <img class="item-container" src="img/portfolio/sexualharrassment.png" alt="8" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">SYNC | Your Online Profile</h5>
-                                            <p class="white">Your digital legacy follows you wherever you go. You ARE "googlable!" Learn how to sync your professional self "in real life (IRL)" with your online profile.</p>
+                                            <h5 class="lightblue">Sexual Harassment: When Professional Development Is Compromised</h5>
+                                            <p class="white">When sexual harassment is occurring in an environment where a lot of time is spent, the ability to have growth and experience well-being can become limited. This session will encourage participants to think critically about sexual harassment and possible ways to respond to sexual harassment.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
@@ -447,14 +449,17 @@
             <!-- End Work Gallary -->
         </section>
         <!-- End Work Section -->
-        <div id="cal" class="responsiveCal" >
+        <br />
+        <br /> 
+        <br />
+        <div id="cal" class="container" >
             <h1 align="center"> Calendar </h1>
             <p>
-                <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=seascapengineering%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showTabs=0&amp;showCalendars=0&amp;height=1000&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=seascapengineering%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0" width="1300" height="1000" frameborder="0" scrolling="no"></iframe>
             </p>
         </div>
-
         <hr />
+
 
         <!-- Contant Slider Section -->
         <section id="contant" class="wow fadeIn ptb ptb-sm-80">
