--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
                                 <div class="team-item-detail">
                                     <div class="team-item-detail-inner light-color">
                                         <h5>Jenny Mak</h5>
-                                        <p>Dr. Jenny Mak is the Executive Director of Columbia’s Industrial Engineering and Operations Research Department, and Executive Director of Graduate Career Placement for Columbia Engineering.</p>
+                                        <p>Dr. Jenny Mak is the Executive Director of Executive Director of Graduate Career Placement for Columbia Engineering.</p>
                                         <ul class="social">
                                             <li><a href="mailto:jenny@columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
                                         <!--
