--- a/contact.html
+++ b/contact.html
@@ -366,7 +366,7 @@
                                 <div class="team-item-detail">
                                     <div class="team-item-detail-inner light-color">
                                         <h5>Tiffany Alexander</h5>
-                                        <p>Tiffany has a background in graduate career development and a love for helping students obtain jobs that align with their specific career interests. She received her BA in Psychology from Saint John’s University, graduating magna cum laude, and her MS in Industrial/Organizational Psychology from Baruch College’s Weissman School of Arts and Sciences.</p>
+                                        <p>Tiffany has a background in graduate career development and a love for helping students obtain jobs that align with their specific career interests.</p>
                                         <ul class="social">
                                             <li><a href="mailto:tiffany@ieor.columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
                                         <!--
