--- a/contact.html
+++ b/contact.html
@@ -410,7 +410,7 @@
                     <div class="col-md-3 col-sm-12 col-xs-12">
                         <p>500 West 120 Street, New York, NY 10027.</p>
                         <ul class="link-small">
-                            <li><a href="mailto:yourname@domain.com"><i class="fa fa-envelope-o left"></i></a></li>
+                            <li><a href="http://pdl.engineering.columbia.edu/contact.html"><i class="fa fa-envelope-o left"></i></a></li>
                             <li><a><i class="fa fa-phone left"></i>212-854-6438</a></li>
                         </ul>
                     </div>
